<resources>
    <string name="app_name">ToDoReminder</string>

    <string name="task_notification_channel_id" translatable="false">todo_task_channel</string>
    <string name="task_notification_channel_name" translatable="true">해야할 일</string>

    <string name="task_notification_title">나의 해야만 하는 일들</string>
    <string name="task_notification_text">해야할 일들이 있습니다</string>
    <string name="task_notification_description">해야할 일들을 알려줍니다</string>

    <string name="task_empty_text">할일을 추가해보세요</string>

    <string name="wifi_checker_onLost_text">와이파이가 끊어집니다. 외출잘하고 오세요</string>

    <string name="wifi_notification_channel_id" translatable="false">wifi_notice_channel</string>
    <string name="wifi_notification_channel_name" translatable="true">와이파이 연결</string>

    <string name="wifi_notification_title">집에 안전하게 잘 도착하셨나요?</string>
    <string name="wifi_notification_text">저장해놨던 해야할 일들이 있습니다</string>
    <string name="wifi_notification_channel_description">와이파이 연결을 확인합니다</string>

    <string name="home_fragment_search_edt_hint">해야할 일</string>

    <string name="home_fragment_category_title">QUICK CHECKLIST</string>
    <string name="home_fragment_todo_title">YOUR TASKS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_task_category_text">Category</string>
    <string name="add_task_task_name_text">TaskName</string>
    <string name="add_task_task_period_text">TaskPeriod</string>
    <string name="add_task_task_importance_text">TaskImportance</string>
    <string name="add_task_task_description_text">TaskDescription</string>

    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="loading_categories_error">Error while loading categories</string>
    <string name="error_task_count">Error while task count</string>
    <string name="save_task_error">Error while Save tasks</string>
    <string name="save_task_success">Success save task</string>
</resources>